# reco-forge

./: .gitignore  Cargo.toml  Dockerfile  README.md  RUN.md  games_clean.json
.devcontainer/: devcontainer.json
examples/: desc_example.rs  item_example.rs
sample-json/: worker.ipynb
sample-json/movies/: clean_json.py  movies_clean_50.json
src/: lib.rs  main.rs  other.rs
src/helpers/: mod.rs  post_recommendation.rs  pre_recommendation.rs  recommendation.rs  types.rs  utils.rs
src/sample-json/: games.json  games_clean_mini.json  load_json.py
src/sample-json/movies/: clean_json.py  movies.json  movies_clean.json  movies_clean_mini.json
src/sample-json/videogames/: games_clean.json
