[package]
name = "reco-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.114"
anyhow = "1.0.75"
burn = { version = "0.11.1"}
candle-core = "0.3.1"
candle-examples = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
clap = "4.4.11"
hf-hub = "0.3.2"
tokenizers = "0.15.0"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[lib]
path = "src/lib.rs"