[package]
name = "reco-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
clap = "4.4.11"
hf-hub = "0.3.2"
candle = { version = "0.3.1", package = "candle-core" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.108"
tokenizers = "0.15.0"

[lib]
path = "src/lib.rs"